[package]
name = "hrclgbtq2020server"
version = "1.0.0"
authors = ["Kevin Swiber <kswiber@gmail.com>"]
edition = "2018"
default-run = "hrclgbtq2020server"

[dependencies]
async-graphql = "2.9"
async-graphql-tide = "2.9"
async-std = "1.9.0"
slab = "0.4"
tide = "0.16"

[build-dependencies]
csv = "1.1"
serde = "1.0"